--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "@types/react-dom": "^18.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.0",
+    "react-responsive": "^9.0.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10",
+    "@types/styled-components": "^5.1.26"
   }
 }
