--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test-player",
   "version": "0.1.0",
+  "homepage": "http://mikhail-shchuka.github.io/test-styled-components-react-player",
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.10.5",
@@ -25,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0"
   }
 }
